--- a/index.html
+++ b/index.html
@@ -55,5 +55,9 @@
       </section>
     </main>
   </div>
+
+  <footer>
+    Feito com <img src="assets/heart.svg" alt="Coraçãozinho"> 
+  </footer>
 </body>
 </html>
